trocado de produto 3 para shot

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <td>10$</td>
                 <td>Sim</td>
 
-                <td>Produto 3</td>
+                <td>short</td>
                 <td>3</td>
                 <td>15$</td>
                 <td>Nao</td>
